# cargo-safety

./: .gitignore  Cargo.toml  README.md  main.js
src/: check_git.rs  checks.rs  lib.rs  main.rs  reports.rs
