[package]
name = "harbor"
version = "0.1.0"
authors = ["Alex Kehayias"]
description = "Safety checks for Rust crates"
repository = "https://github.com/alexkehayias/harbor"
license = "Eclipse Public License either version 1.0 or (at your option) any later version"

[dependencies]
git2 = "0.6"
syntex = "0.52.0"
syntex_syntax = "0.52.0"
syntex_errors = "0.52.0"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
glob = "*"