[package]
name = "cargo-safety"
version = "0.1.0"
authors = ["Alex Kehayias"]
description = "Safety checks for Rust crates"
repository = "https://github.com/alexkehayias/cargo-safety"
license = "EPL-1.0"
keywords = ["cargo", "plugin", "safety", "safe", "checks"]

[dependencies]
syntex = "0.52.0"
syntex_syntax = "0.52.0"
syntex_errors = "0.52.0"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
glob = "0.2"
